using UnityEngine;

public class AnimStrings 
{
    public static string isMoving = "Moving";
    public static string isJumping = "Jumping";
    public static string isDoubleJump = "DoubleJump";
    public static string isDashing = "Dashing";
    public static string isNormalAttack1 = "NormalAtk1";
    public static string isNormalAttack2 = "NormalAtk2";
    public static string isNormalAttack3 = "NormalAtk3";


}
